force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsClosed</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>