force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__IsPaused__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPaused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Paused</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPaused</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>