force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__PauseStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PauseStartDateTime__c</fullName>
    <label>Pause Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PauseStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>