force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__PermanentSolutionDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__PermanentSolutionDescription__c</fullName>
    <label>Permanent Solution</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PermanentSolutionDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>